finishing touches for rest countries

--- a/rest-countries/index.html
+++ b/rest-countries/index.html
@@ -1,17 +1,17 @@
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>REST Countries API</title>
-
+    <title>Capitals</title>
   </head>
   <body>
     <h1>REST Countries API</h1>
     <div>
-    Country Name: <input type="text" id="myText" value="">
-  </div>
-    <button onclick="searchCountry()">Search</button>
-    <div> Capitals
+      Country Name: <input type="text" id="myText" value="">
+      <button onclick="searchCountry()">Search</button>
+      <p>Enter country name to look up capitals</p>
+    </div>
+    <div> 
+      <h3>Capitals</h3>
       <p><span id="capitals"></span></p>
     </div>
     <script src="main.js"></script>
